# Exavolt

./: .gitignore  .gitmodules  README.md  errors.py  exavolt.py  exavolt_gui.py  modloader.py  pyproject.toml  requirements.txt
asm/: CheckCompletedCampaignInPlayerProfile.asm  CodeInjector.asm  CodeInjector.asm.bak  CodeInjectorStage1.asm  CodeInjectorStage2.asm  CopyLevelArrayToMemory.asm  CreateSecondarySaveFile.asm  DeclareScratchMemory.asm  DeleteSecondarySaveFile.asm  DontGrayOutContinueOfExtraLevels.asm  EnableContinueOfExtraLevels.asm  GetLevelToContinueTo.asm  HideSecondaryProfilesFromMenues.asm  IncrementExtraCurrentLevelVariable.asm  InitSecondarySaveFileMemory.asm  ListExtraLevelsInReplayMenu.asm  LoadDataFromSecondaryMemoryToLevelSelection.asm  LoadInventoryFromSecondaryMemory.asm  LoadSecondarySaveFileFromDisk.asm  SaveChipsAndOtherThingsToSecondMemory.asm  SaveDataFromReplayToSecondaryMemory.asm  SaveInventoryToSecondaryMemory.asm  SaveSecondarySaveFileMemoryToDisk.asm  SetDefaultSaveFileValues.asm  SkipCountSecondaryProfiles.asm
docs/: manifest_options.md
files/: multi_lvl$.csv  pick_level$.csv
lib/: assembly.py  assembly_codes.py  csv_table_reader.py  dol.py  file_edits.py  hacks.py  insert_mod.py  iso.py  level.py  metadata_loader.py  scratch_memory.py  secondary_save_file.py  util.py
lib/macros/: CalculateNewInventorySaveLocation.asm  SaveFileDefaults.asm  SeeIfGameCompleted.asm
