[tool.poetry]
name = "exavolt"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, < 3.14"
bidict = "^0.23.1"
jsonpickle = "^4.0.5"
pyisotools = "^2.4.7"
geckolibs = "^0.2.3"
jinja2 = "^3.1.6"
jsonschema = "^4.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
